--- a/login/html/overview.html
+++ b/login/html/overview.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="overview.css">
+    <link rel="stylesheet" type="text/css" href="../css/overview.css">
     <style media="screen and (max-width:1240px)">
         #openbtn {
             margin-right: 120vh;
@@ -21,8 +21,8 @@
             width: 500px;
         }
     </style>
-    <link rel="stylesheet" media="screen and (max-width:700px)" href="overview_phone1.css">
-    <link rel="stylesheet" media="screen and (max-width:500px)" href="overview_phone.css">
+    <link rel="stylesheet" media="screen and (max-width:700px)" href="../css/overview_phone1.css">
+    <link rel="stylesheet" media="screen and (max-width:500px)" href="../css/overview_phone.css">
     <title>Overview</title>
 </head>
 
@@ -154,8 +154,7 @@
                     </div>
                     <div style="margin-top:18px;" class="phone_form">
                         <label class="label_description" for="lname">Description</label>
-                        <textarea id="description" name="description" rows="10" cols="50"
-                            placeholder="The description of the issue goes here. This is a multiline text box."></textarea>
+                        <textarea id="description" name="description" rows="10" cols="50" placeholder="The description of the issue goes here. This is a multiline text box."></textarea>
                     </div>
                     <div id="phone_dept" class="phone_form">
                         <label class="label_department" for="department">Select Department</label>
@@ -177,7 +176,7 @@
     <footer id="foot">
         Copyright @Copyright www.studentsupport@kiit.ac.in All rights reserved!
     </footer>
-    <script src="overview.js"></script>
+    <script src="../javascript/overview.js"></script>
 </body>
 
 </html>
