--- a/login/html/welcome.html
+++ b/login/html/welcome.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="welcome.css">
-    <link rel="stylesheet" media="screen and (max-width:1050px)" href="welcome_phone.css">
+    <link rel="stylesheet" href="../css/welcome.css">
+    <link rel="stylesheet" media="screen and (max-width:1050px)" href="../css/welcome_phone.css">
 
     <title>Welcome | Student Support</title>
 </head>
@@ -28,14 +28,14 @@
         <div id="slogan">
             <p id="one">Of the Student</p>
             <p id="two">By the Student</p>
-            <p id="three">For the Student</p> 
+            <p id="three">For the Student</p>
         </div>
         <button type="button" id="login">LOGIN</button>
     </div>
     <footer>
         Copyright @Copyright www.studentsupport@kiit.ac.in All rights reserved!
     </footer>
-    <script src="welcome.js"></script>
+    <script src="../javascript/welcome.js"></script>
 </body>
 
 
