--- a/login/html/register.html
+++ b/login/html/register.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="register.css">
-    <link rel="stylesheet" media="screen and (max-width:600px)" href="register_phone.css">
+    <link rel="stylesheet" type="text/css" href="../css/register.css">
+    <link rel="stylesheet" media="screen and (max-width:600px)" href="../css/register_phone.css">
     <title>Register | Student Support</title>
 </head>
 
@@ -34,7 +34,7 @@
     <footer>
         Copyright @Copyright www.studentsupport@kiit.ac.in All rights reserved!
     </footer>
-    <script src="register.js"></script>
+    <script src="../javascript/register.js"></script>
 </body>
 
 </html>
