--- a/login/html/forget.html
+++ b/login/html/forget.html
@@ -34,7 +34,7 @@
                         <input type="password" placeholder="Type OTP here" required />
                     </div>
                     <button type="submit">Send OTP</button>
-                    <button type="submit">Submit</button>
+                    <button type="submit" id="submit_form">Submit</button>
                 </div>
             </div>
         </form>
