--- a/login/html/overview.html
+++ b/login/html/overview.html
@@ -89,56 +89,8 @@
         <div id="phone_issue_container">
             <label class="issues">Issues</label>
             <div>
-                <table>
-                    <tr class="first_row">
-                        <th>Ref No</th>
-                        <th>Subject</th>
-                        <th>Date Complained </th>
-                        <th>Date Resolved</th>
-                        <th>Status</th>
-                    </tr>
-                    <tr>
-                        <td>Abc</td>
-                        <td> xyz</td>
-                        <td> 2022-10-25</td>
-                        <td> 2022-10-25</td>
-                        <td>delivered</td>
-                    </tr>
-                    <tr>
-                        <td>Abc</td>
-                        <td> xyz</td>
-                        <td> 2022-10-25</td>
-                        <td> 2022-10-25</td>
-                        <td>delivered</td>
-                    </tr>
-                    <tr>
-                        <td>Abc</td>
-                        <td> xyz</td>
-                        <td> 2022-10-25</td>
-                        <td> 2022-10-25</td>
-                        <td>delivered</td>
-                    </tr>
-                    <tr>
-                        <td>Abc</td>
-                        <td> xyz</td>
-                        <td> 2022-10-25</td>
-                        <td> 2022-10-25</td>
-                        <td>delivered</td>
-                    </tr>
-                    <tr>
-                        <td>Abc</td>
-                        <td> xyz</td>
-                        <td> 2022-10-25</td>
-                        <td> 2022-10-25</td>
-                        <td>delivered</td>
-                    </tr>
-                    <tr>
-                        <td>Abc</td>
-                        <td> xyz</td>
-                        <td> 2022-10-25</td>
-                        <td> 2022-10-25</td>
-                        <td>delivered</td>
-                    </tr>
+                <table id="issue_table">
+
                 </table>
             </div>
         </div>
